crates/frontend/scss/components/_reader.scss
.reading-container {
	display: flex;
	flex-direction: column;
	height: 100%;
	width: 100%;
	overflow: hidden;

	> .book {
		display: flex;
		flex-grow: 1;

		justify-content: center;
		align-items: center;

		&.overlay-y > .reader {
			> .navbar {
				position: absolute;
				width: 100%;
				z-index: 100;
				background-color: var(--surface3);
				opacity: 0;
				transition: opacity 0.25s;

				&:hover {
					opacity: 1;
				}
			}

			> .progress {
				position: absolute;
				z-index: 101;
				bottom: 0;
			}
		}
	}

	> .tools {
		display: flex;
		bottom: 0;
		left: 0;
		width: 100%;
		background-color: var(--surface-1);
		padding: 5px;
		z-index: 999;

		&.overlay {
			position: absolute;
			height: 10px;
			opacity: 0;
			padding: 0;
			transition: all 250ms ease;

			&:hover {
				height: unset;
				opacity: 100%;
				padding: 5px;
			}
		}

		> .tool-item {
			margin-right: 5px;
		}
	}
}



.reader {
	position: relative;
	overflow: hidden;

	> .progress {
		width: 100%;
		background-color: #2f3337;
		height: 4px;

		> .prog-bar {
			background-color: var(--brand);
			height: 100%;
		}
	}

	.navbar {
		padding: 10px;
		user-select: none;
		-moz-user-select: none;
		-webkit-user-select: none;

		> * {
			margin-right: 10px;
		}

		> a {
			cursor: pointer;
		}
	}

	.pages {
		position: relative;
		overflow: hidden;

		> .view-overlay {
			z-index: 101;
			position: absolute;
			top: 0;
			left: 0;
			width: 100%;
			height: 100%;
		}

		> .frames {
			position: relative;
		}

		iframe {
			border: none;
			width: 100%;
			height: 100%;
		}
	}
}

